--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "generate": "nuxt generate",
     "heroku-postbuild": "npm run build"
   },
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
     "body-parser": "^1.19.0",
